--- a/coldfront/core/allocation/templates/allocation/allocation_allocationaccount_create.html
+++ b/coldfront/core/allocation/templates/allocation/allocation_allocationaccount_create.html
@@ -15,7 +15,7 @@ Request New Allocation
 <form method="post">
   {% csrf_token %}
   {{form |crispy}}
-  <input class="btn btn-primary" type="submit" value="Submit" />
-  <a class="btn btn-secondary" href="{% url 'allocation-account-list' %}" role="button">Cancel</a><br>
+  <input class="inline-flex items-center px-4 py-2 bg-primary-600 text-white font-medium rounded-lg hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 transition-colors duration-200" type="submit" value="Submit" />
+  <a class="inline-flex items-center px-4 py-2 bg-gray-600 text-white font-medium rounded-lg hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 transition-colors duration-200" href="{% url 'allocation-account-list' %}" role="button">Cancel</a><br>
 </form>
 {% endblock %}
